# tray-runner

./: .editorconfig  .flaskenv  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  babel.cfg  pyproject.toml  translate.sh
.github/workflows/: pypi_develop.yaml
tray_runner/: __init__.py  __main__.py  base_app.py  config.py  constants.py  execution_manager.py  fast_api_app.py  flask_app.py  flask_forms.py  utils.py  version_checker.py
tray_runner/cli/: __init__.py
tray_runner/common_utils/: common.py  fast_api_runner.py  flask_app_runner.py  qt.py
tray_runner/gui/: __init__.py  __main__.py  app.py  command_dialog.py  command_dialog.ui  constants.py  settings_dialog.py  settings_dialog.ui  utils.py
tray_runner/templates/: commands_edit.html  commands_list.html  commands_logs.html  commands_show.html  home.html  layout.html  settings.html  utils.html
tray_runner/translations/: messages.pot
tray_runner/translations/es_ES/LC_MESSAGES/: messages.mo  messages.po
tray_runner/webapp/: README.md  api-client.http  api-server.js  index.html
tray_runner/webapp/static/js/: app.js  auth.js  config.js  router.js
tray_runner/webapp/static/js/views/: about.js  commands_edit.js  commands_list.js  commands_show.js  home.js  login.js  not-found.js  profile.js
