[tool.poetry]
authors = ["Juan A. S. <okelet@gmail.com>"]
description = "Tool to run and restart commands, so they can be continuously executed. The application can be run from the console or using a tray icon."
documentation = "https://github.com/okelet/tray-runner"
homepage = "https://github.com/okelet/tray-runner"
name = "tray-runner"
readme = "README.md"
repository = "https://github.com/okelet/tray-runner"
version = "0.4.1"

[tool.poetry.dependencies]
Babel = "^2.10.1"
click = "^8.1.3"
pydantic = "^1.9.1"
python = ">=3.10,<3.11"
python-slugify = "^6.1.2"
PySide6-Essentials = "^6.3.0"
python-dateutil = "^2.8.2"
winshell = [{ version = "^0.6", platform = "win32" }]
pywin32 = [{ version = "^304", platform = "win32" }]
croniter = "^1.3.5"

[tool.poetry.scripts]
tray-runner-cli = "tray_runner.cli:run"
tray-runner-gui = "tray_runner.gui:run"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
pre-commit = "^2.19.0"
pylint = "^2.13.9"
types-PyYAML = "^6.0.7"
pyinstaller = "^5.0.1"
types-python-slugify = "^5.0.4"
types-python-dateutil = "^2.8.16"
types-pytz = "^2021.3.8"
types-babel = "^2.9.12"
IceSpringPySideStubs-PySide6 = "^1.3.1"
types-croniter = "^1.0.10"
Pillow = "^9.1.1"

[tool.black]
line-length = 999

[tool.isort]
line_length = 999
profile = "black"

[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = ["winshell"]
ignore_missing_imports = true

[tool.pylint.format]
max-line-length = 999

[tool.pylint.master]
extension-pkg-whitelist = "pydantic,PySide6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
